# triple-patterns

./: .gitignore  README.md  pyproject.toml
data/: graph.npy  graph.npz  markup.csv  markup.npy  spikes.npy  triple_data.npz
jupyter_notebooks/: chi2_calc.ipynb  chi2_calc.py  graph_randomization.ipynb  graph_randomization.py  scipy_stats_vectorized.py  triple_calc.ipynb  triple_calc.py
notebooks/: 1_graph_randomization.ipynb  2_triple_calc.ipynb  3_chi2_calc.ipynb
src/triple_patterns/: __init__.py  chi2_calc.py  scipy_stats_vectorized.py  triple_calc.py
