[project]
name = "triple_patterns"
version = "0.1.0"
description = "Some description"
authors = [
    {name = "Alena Varehina",email = "alvareum@gmail.com"}
]
package-mode = true
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scipy (==1.13.1)",
    "pandas (>=2.3.3,<3.0.0)",
    "numba (==0.60.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "numpy (==2.0.2)",
    "matplotlib (==3.9.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
